# pythondev

./: .gitignore  Python_01_Pythonプログラミングについて.ipynb  Python_02_Pythonの基礎.ipynb  Python_04_制御構文.ipynb  main.py  prognum.py  pyproject.toml  最終課題：犬と猫の分類.ipynb  課題10：野球のリーグ戦の勝ち負け数.ipynb  課題11：散布図と近似曲線のグラフ.ipynb  課題12：腫瘍の分類.ipynb  課題13_糖尿病の進行状況の回帰予測.ipynb  課題1：自己紹介をするプログラム.ipynb  課題2：送料込みの価格計算.ipynb  課題3：平均点を求めるプログラム.ipynb  課題4：エラトステネスのふるい.ipynb  課題5：ゼロ除算の例外処理.ipynb  課題6：内包表記でFizzBuzz問題.ipynb  課題7：九九の表.ipynb  課題8：単語内の文字数カウント.ipynb  課題9：再帰的な関数でのフィボナッチ数列.ipynb
005_oop/: oop.ipynb
00_orientation/: helloworld.ipynb
02_python/: basic.ipynb  datatype.ipynb  function.ipynb  if.ipynb  operator.ipynb  task01.ipynb  task02.ipynb  task03.ipynb  task04.ipynb  try.ipynb
03_collections/: dict.ipynb  file.ipynb  list.ipynb  set.ipynb  str.ipynb  task01.ipynb  task02.ipynb  todo.ipynb  todo.txt  tuple.ipynb
04_function/: 20260410_114641.txt  function.ipynb  module.ipynb  task01.ipynb  task02.ipynb
05_oop/: task01.ipynb
06_test/: test_authenticator.py
08_htmlcss/: contents.html  cssbasic.css  layout.css  outline.html  task01.html  task02.css  task02.html
10_llmbasic/: chat.ipynb  chatbot.ipynb  show_model.ipynb  task01.ipynb
11_tool/: search.ipynb  simple.ipynb
12_excel/: advance.ipynb  basic_01.ipynb  basic_02.ipynb  workflow.ipynb  アンケート分析結果.xlsx  カテゴリー毎の売上戦略.md  フォーマット後電話番号.xlsx  商品名グループ化結果.xlsx  売上データ分析結果.xlsx  都道府県付住所.xlsx
13_scraping/: basic.ipynb  wikipedia.ipynb
14_rag/: advance.ipynb  basic.ipynb  task01.ipynb
15_langchain/: agent_chatbot.ipynb  basic.ipynb  (+3 more)
(+2 files in other folders)
